src/test/deca/codegen/valid/objet/ClassEmptyParentRandom.deca
// Description :
//    Test génération de code pour une classe vide dont n'est pas Object mais déjà défini
//
// Resultats decac:
// Resultat ima: Rien


class A{
}
class B extends A{
}